// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table users {
  id integer [primary key]
  username varchar [unique]
  email varchar [unique]
  password varchar
  first_name varchar
  last_name varchar
  is_active boolean
  is_staff boolean
  date_joined timestamp
  created_at timestamp
  updated_at timestamp
}

Table destinations {
  id integer [primary key]
  name varchar
  country varchar
  city varchar
  description text
  climate varchar
  best_time_to_visit varchar
  latitude decimal
  longitude decimal
  is_featured boolean
  average_rating decimal
  image varchar
  created_at timestamp
  updated_at timestamp
}

Table hotels {
  id integer [primary key]
  name varchar
  destination_id integer [ref: > destinations.id]
  address varchar
  description text
  accommodation_type varchar
  rating decimal
  price_per_night decimal
  amenities text
  latitude decimal
  longitude decimal
  image varchar
  created_at timestamp
  updated_at timestamp
}

Table attractions {
  id integer [primary key]
  name varchar
  destination_id integer [ref: > destinations.id]
  description text
  category varchar
  admission_fee decimal
  opening_hours text
  latitude decimal
  longitude decimal
  image varchar
  created_at timestamp
  updated_at timestamp
}

Table excursions {
  id integer [primary key]
  name varchar
  destination_id integer [ref: > destinations.id]
  description text
  duration varchar
  price decimal
  included_services text
  meeting_point text
  image varchar
  created_at timestamp
  updated_at timestamp
}

Table reviews {
  id integer [primary key]
  user_id integer [ref: > users.id]
  hotel_id integer [ref: > hotels.id]
  rating integer
  comment text
  created_at timestamp
  updated_at timestamp
}

Table bookings {
  id integer [primary key]
  user_id integer [ref: > users.id]
  hotel_id integer [ref: > hotels.id]
  check_in_date date
  check_out_date date
  number_of_guests integer
  total_price decimal
  status varchar
  booking_reference varchar [unique]
  created_at timestamp
  updated_at timestamp
}

Table guides {
  id integer [primary key]
  destination_id integer [ref: > destinations.id]
  title varchar
  content text
  highlights text
  tips text
  created_at timestamp
  updated_at timestamp
}

Table favorites {
  id integer [primary key]
  user_id integer [ref: > users.id]
  destination_id integer [ref: > destinations.id, null]
  hotel_id integer [ref: > hotels.id, null]
  attraction_id integer [ref: > attractions.id, null]
  excursion_id integer [ref: > excursions.id, null]
  created_at timestamp
}

// Indexes
Indexes {
  (destination_id, hotel_id) [name: 'idx_destination_hotel']
  (user_id, hotel_id) [name: 'idx_user_hotel']
  (destination_id, attraction_id) [name: 'idx_destination_attraction']
}

// Relationships
Ref: "hotels"."id" < "reviews"."hotel_id" [delete: cascade]
Ref: "destinations"."id" < "guides"."destination_id" [delete: cascade]
Ref: "destinations"."id" < "hotels"."destination_id" [delete: cascade]
Ref: "destinations"."id" < "attractions"."destination_id" [delete: cascade]
Ref: "destinations"."id" < "excursions"."destination_id" [delete: cascade] 